use base for building
git-svn-id: https://scm.gforge.inria.fr/anonscm/svn/kermeta/trunk@14319 3b3ea266-f0f1-470e-95cb-5b2c9abc2e95

Former-commit-id: 7b03478b5cb35f41d6a41915bdca9653169b3983

--- a/hudson_jobs/full_kermeta_studio_eclipsePackages/build.xml
+++ b/hudson_jobs/full_kermeta_studio_eclipsePackages/build.xml
@@ -4,7 +4,7 @@
 	<!-- Change this according to the computer running the script -->
 	<property name="eclipse.native.version.name" value="linux_x86_64"/>
 	<property name="eclipse.native.archive.extension" value="tar.gz"/>
-	<property name="eclipse.native.base.url" value="http://eclipse.ialto.org/eclipse/downloads/drops/R-3.6.1-201009090800/eclipse-SDK-3.6.1-linux-gtk-x86_64.tar.gz"/>	
+	<property name="eclipse.native.base.url" value="http://tipimouss.irisa.fr:8090/job/provision_eclipse_helios_bases_for_kermeta/lastSuccessfulBuild/artifact/provision_eclipse_helios_bases_for_kermeta/build/kermeta_helios_linux_x86_64_base.tar.gz"/>	
 	<!-- <property name="eclipse.native.version.name" value="win32"/>
 	<property name="eclipse.native.archive.extension" value="zip"/>
 	<property name="eclipse.native.base.url" value="http://eclipse.ialto.org/eclipse/downloads/drops/R-3.6.1-201009090800/eclipse-SDK-3.6.1-win32.zip"/>
