--- a/hudson_jobs/generate_kermeta_donwload_stat_geoloc_map/pom.xml
+++ b/hudson_jobs/generate_kermeta_donwload_stat_geoloc_map/pom.xml
@@ -25,6 +25,7 @@
         <dependency>
         	<groupId>fr.inria.triskell.ipstat</groupId>
         	<artifactId>ipstat.geoloc.mapper</artifactId>
+        	<version>1.0.0-SNAPSHOT</version>
         	<type>jar</type>
         </dependency>
         
