git-svn-id: https://scm.gforge.inria.fr/anonscm/svn/kermeta/trunk@14546 3b3ea266-f0f1-470e-95cb-5b2c9abc2e95
Former-commit-id: 701f0563eea80c35750b3dc47706807895199911

--- a/hudson_jobs/generate_kermeta_donwload_stat_geoloc_map/build.xml
+++ b/hudson_jobs/generate_kermeta_donwload_stat_geoloc_map/build.xml
@@ -11,9 +11,9 @@
 	</target>	
 	<target name="get_stat_raw_data">
 		<echo>Step 1 - Retrieve latest version of the raw stat data</echo>
-		<delete>
+		<!-- <delete>
 			<fileset dir="${data.folder}" includes="*"/>
-		</delete>
+		</delete> -->
 		<mkdir dir="${data.folder}"/>
 		<get src="http://www.kermeta.org//awstats_data/kermeta_update/" 
 							dest="${data.folder}"/>
