git-svn-id: https://scm.gforge.inria.fr/anonscm/svn/kermeta/trunk@14547 3b3ea266-f0f1-470e-95cb-5b2c9abc2e95
Former-commit-id: 00d813660c0752b8a1fe02a29696c1cb54b930bb

--- a/hudson_jobs/generate_kermeta_donwload_stat_geoloc_map/build.xml
+++ b/hudson_jobs/generate_kermeta_donwload_stat_geoloc_map/build.xml
@@ -14,9 +14,14 @@
 		<!-- <delete>
 			<fileset dir="${data.folder}" includes="*"/>
 		</delete> -->
-		<mkdir dir="${data.folder}"/>
-		<get src="http://www.kermeta.org//awstats_data/kermeta_update/" 
-							dest="${data.folder}"/>
+		<!-- <mkdir dir="${data.folder}"/>-->
+		<exec executable="wget" failonerror="true">
+			<arg value="-nv"/>
+			<arg value="-r"/>
+			<arg value="-l"/>
+			<arg value="2"/>
+			<arg value="http://www.kermeta.org//awstats_data/kermeta_update/"/>
+		</exec>
 	</target>
 	<target name="generate_map">
 		<echo>Step 2 - Preparation the map</echo>
