--- a/hudson_jobs/generate_kermeta_donwload_stat_geoloc_map/build.xml
+++ b/hudson_jobs/generate_kermeta_donwload_stat_geoloc_map/build.xml
@@ -27,7 +27,7 @@
 		<echo>Step 2 - Preparation the map</echo>
 		<exec executable="mvn" failonerror="true">
 			<arg value="exec:java" />
-			<env key="exec.mainClass" value="fr.inria.ipstat.geoloc.mapper.MapperCLI"/>
+			<arg value="-Dexec.mainClass='fr.inria.ipstat.geoloc.mapper.MapperCLI'"/>
 		</exec>
 		
 	</target>
