git-svn-id: https://scm.gforge.inria.fr/anonscm/svn/kermeta/trunk@14549 3b3ea266-f0f1-470e-95cb-5b2c9abc2e95
Former-commit-id: 1bf52a8c6fe655b606e61a13e767f9bd36add752

--- a/hudson_jobs/generate_kermeta_donwload_stat_geoloc_map/build.xml
+++ b/hudson_jobs/generate_kermeta_donwload_stat_geoloc_map/build.xml
@@ -24,9 +24,9 @@
 		</exec>
 	</target>
 	<target name="generate_map">
-		<echo>Step 2 - Preparation the map</echo>
+		<echo>Step 2 - Preparation of the map</echo>
 		<exec executable="mvn" failonerror="true">
-			<arg value="exec:java" />
+			<arg value="compile exec:java" />
 			<arg value="-Dexec.mainClass='fr.inria.ipstat.geoloc.mapper.MapperCLI'"/>
 		</exec>
 		
