git-svn-id: https://scm.gforge.inria.fr/anonscm/svn/kermeta/trunk@14550 3b3ea266-f0f1-470e-95cb-5b2c9abc2e95
Former-commit-id: 1a827bb36b6f45c3410593ad5798a29cb33d45aa

--- a/hudson_jobs/generate_kermeta_donwload_stat_geoloc_map/build.xml
+++ b/hudson_jobs/generate_kermeta_donwload_stat_geoloc_map/build.xml
@@ -26,7 +26,8 @@
 	<target name="generate_map">
 		<echo>Step 2 - Preparation of the map</echo>
 		<exec executable="mvn" failonerror="true">
-			<arg value="compile exec:java" />
+			<arg value="exec:java" />
+			<arg value="-e" />
 			<arg value="-Dexec.mainClass='fr.inria.ipstat.geoloc.mapper.MapperCLI'"/>
 		</exec>
 		
