git-svn-id: https://scm.gforge.inria.fr/anonscm/svn/kermeta/trunk@14551 3b3ea266-f0f1-470e-95cb-5b2c9abc2e95
Former-commit-id: fafa3fd630f78f3d4f325ee0bb2f054d2ec8db90

--- a/hudson_jobs/generate_kermeta_donwload_stat_geoloc_map/build.xml
+++ b/hudson_jobs/generate_kermeta_donwload_stat_geoloc_map/build.xml
@@ -26,6 +26,7 @@
 	<target name="generate_map">
 		<echo>Step 2 - Preparation of the map</echo>
 		<exec executable="mvn" failonerror="true">
+			<arg value="compile" />
 			<arg value="exec:java" />
 			<arg value="-e" />
 			<arg value="-Dexec.mainClass='fr.inria.ipstat.geoloc.mapper.MapperCLI'"/>
