git-svn-id: https://scm.gforge.inria.fr/anonscm/svn/kermeta/trunk@14552 3b3ea266-f0f1-470e-95cb-5b2c9abc2e95
Former-commit-id: ebb68572f2313e9fdbcb64452cbc60bc5023de2c

--- a/hudson_jobs/generate_kermeta_donwload_stat_geoloc_map/build.xml
+++ b/hudson_jobs/generate_kermeta_donwload_stat_geoloc_map/build.xml
@@ -29,7 +29,7 @@
 			<arg value="compile" />
 			<arg value="exec:java" />
 			<arg value="-e" />
-			<arg value="-Dexec.mainClass='fr.inria.ipstat.geoloc.mapper.MapperCLI'"/>
+			<arg value="-Dexec.mainClass=&quot;fr.inria.ipstat.geoloc.mapper.MapperCLI&quot;"/>
 		</exec>
 		
 	</target>
