--- a/hudson_jobs/generate_kermeta_donwload_stat_geoloc_map/pom.xml
+++ b/hudson_jobs/generate_kermeta_donwload_stat_geoloc_map/pom.xml
@@ -9,8 +9,8 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>org.kermeta.ipstat</groupId>
-    <artifactId>ipstat.geoloc.mapper.</artifactId>
+    <groupId>fr.inria.triskell.ipstat</groupId>
+    <artifactId>ipstat.geoloc.mapper.kermeta</artifactId>
     
     
     <version>1.0.0-SNAPSHOT</version>
@@ -28,6 +28,39 @@
         	<version>1.0.0-SNAPSHOT</version>
         	<type>jar</type>
         </dependency>
-        
 	</dependencies>
+	<repositories>
+			<repository>
+			  <id>kermeta</id>
+			  <name>Kermeta</name>
+			  <releases>
+				<enabled>true</enabled>
+				<updatePolicy>daily</updatePolicy>
+				<checksumPolicy>warn</checksumPolicy>
+			  </releases>
+			  <snapshots>
+				<enabled>true</enabled>
+				<updatePolicy>daily</updatePolicy>
+				<checksumPolicy>fail</checksumPolicy>
+			  </snapshots>
+			  <url>http://www.kermeta.org/maven2</url>
+			  <layout>default</layout>
+			</repository>
+			<repository>
+			  <id>kermetaSnapshot</id>
+			  <name>Kermeta Snapshots</name>
+			  <releases>
+				<enabled>false</enabled>
+				<updatePolicy>always</updatePolicy>
+				<checksumPolicy>warn</checksumPolicy>
+			  </releases>
+			  <snapshots>
+				<enabled>true</enabled>
+				<updatePolicy>always</updatePolicy>
+				<checksumPolicy>fail</checksumPolicy>
+			  </snapshots>
+			  <url>http://www.kermeta.org/maven2-snapshots</url>
+			  <layout>default</layout>
+			</repository>
+		</repositories>
 </project>
