git-svn-id: https://scm.gforge.inria.fr/anonscm/svn/kermeta/trunk@14554 3b3ea266-f0f1-470e-95cb-5b2c9abc2e95
Former-commit-id: 0dca58c37f938dfd725292d9bdeb1d8d17ef8ca7

--- a/hudson_jobs/generate_kermeta_donwload_stat_geoloc_map/pom.xml
+++ b/hudson_jobs/generate_kermeta_donwload_stat_geoloc_map/pom.xml
@@ -27,6 +27,7 @@
         	<artifactId>ipstat.geoloc.mapper</artifactId>
         	<version>1.0.0-SNAPSHOT</version>
         	<type>jar</type>
+        	<scope>runtime</scope>
         </dependency>
 	</dependencies>
 	<repositories>
