git-svn-id: https://scm.gforge.inria.fr/anonscm/svn/kermeta/trunk@14556 3b3ea266-f0f1-470e-95cb-5b2c9abc2e95
Former-commit-id: 74a5b507172d4283186f2e4dc3ff86723db77dc4

--- a/hudson_jobs/generate_kermeta_donwload_stat_geoloc_map/build.xml
+++ b/hudson_jobs/generate_kermeta_donwload_stat_geoloc_map/build.xml
@@ -11,15 +11,15 @@
 	</target>	
 	<target name="get_stat_raw_data">
 		<echo>Step 1 - Retrieve latest version of the raw stat data</echo>
-		<!-- <delete>
-			<fileset dir="${data.folder}" includes="*"/>
-		</delete> -->
+		<delete>
+			<fileset dir="www.kermeta.org" includes="*"/>
+		</delete>
 		<!-- <mkdir dir="${data.folder}"/>-->
 		<exec executable="wget" failonerror="true">
 			<arg value="-nv"/>
 			<arg value="-r"/>
-			<arg value="-l"/>
-			<arg value="2"/>
+			<arg value="-l 2"/>
+			<arg value="-A txt"/>
 			<arg value="http://www.kermeta.org//awstats_data/kermeta_update/"/>
 		</exec>
 	</target>
