git-svn-id: https://scm.gforge.inria.fr/anonscm/svn/kermeta/trunk@14557 3b3ea266-f0f1-470e-95cb-5b2c9abc2e95
Former-commit-id: e9ab1bcea8b9792062eaf994ffc0903ce04ea1cb

--- a/hudson_jobs/generate_kermeta_donwload_stat_geoloc_map/build.xml
+++ b/hudson_jobs/generate_kermeta_donwload_stat_geoloc_map/build.xml
@@ -11,7 +11,7 @@
 	</target>	
 	<target name="get_stat_raw_data">
 		<echo>Step 1 - Retrieve latest version of the raw stat data</echo>
-		<delete>
+		<delete failonerror="false">
 			<fileset dir="www.kermeta.org" includes="*"/>
 		</delete>
 		<!-- <mkdir dir="${data.folder}"/>-->
