git-svn-id: https://scm.gforge.inria.fr/anonscm/svn/kermeta/trunk@14558 3b3ea266-f0f1-470e-95cb-5b2c9abc2e95
Former-commit-id: 6612bd186a3a696da3be412e91ad9e2a58f838a4

--- a/hudson_jobs/generate_kermeta_donwload_stat_geoloc_map/build.xml
+++ b/hudson_jobs/generate_kermeta_donwload_stat_geoloc_map/build.xml
@@ -18,8 +18,8 @@
 		<exec executable="wget" failonerror="true">
 			<arg value="-nv"/>
 			<arg value="-r"/>
-			<arg value="-l 2"/>
-			<arg value="-A txt"/>
+			<arg value="-l"/><arg value="2"/>
+			<arg value="-A"/><arg value="txt"/>
 			<arg value="http://www.kermeta.org//awstats_data/kermeta_update/"/>
 		</exec>
 	</target>
