git-svn-id: https://scm.gforge.inria.fr/anonscm/svn/kermeta/trunk@14559 3b3ea266-f0f1-470e-95cb-5b2c9abc2e95
Former-commit-id: 33947e59271b3d57f3b4457097996e3bcf585e9f

--- a/hudson_jobs/generate_kermeta_donwload_stat_geoloc_map/build.xml
+++ b/hudson_jobs/generate_kermeta_donwload_stat_geoloc_map/build.xml
@@ -29,8 +29,9 @@
 			<arg value="compile" />
 			<arg value="exec:java" />
 			<arg value="-e" />
-			<arg value="-Dexec.mainClass=fr.inria.ipstat.geoloc.mapper.MapperCLI"/>
+			<arg value="-Dexec.mainClass=&quot;fr.inria.ipstat.geoloc.mapper.MapperCLI&quot;"/>
 			<arg value="-Dexec.executableDependency=true"/>
+			<arg value="-Dexec.args=&quot;www.kermeta.org/awstats_data/kermeta_update&quot;"/>
 		</exec>
 		
 	</target>
