git-svn-id: https://scm.gforge.inria.fr/anonscm/svn/kermeta/trunk@14590 3b3ea266-f0f1-470e-95cb-5b2c9abc2e95
Former-commit-id: eb18e73febdc524de0bfbb644731566010b10e19

--- a/hudson_jobs/generate_kermeta_donwload_stat_geoloc_map/build.xml
+++ b/hudson_jobs/generate_kermeta_donwload_stat_geoloc_map/build.xml
@@ -3,6 +3,9 @@
 	<property name="env.WORKSPACE" location="."/>
 	<property name="simple.maven.osgi.file.deploy.url" value="http://tipimouss.irisa.fr/maven2-snapshots/org/kermeta/tools/tools.simple.maven.osgi.file.deploy/1.0.0-SNAPSHOT/tools.simple.maven.osgi.file.deploy-1.0.0-SNAPSHOT.jar"/>
 	<property name="data.folder" location="${env.WORKSPACE}/data"/>
+	<property name="deploy.server" value="web1.irisa.fr"/>
+	<property name="deploy.user" value="web-triskell"/>
+	<property name="deploy.path" value="/home/web/apache/sites/kermeta.org/htdocs/docs"/>
 	
 	
 	<target name="all" depends="">
@@ -31,9 +34,21 @@
 			<arg value="-e" />
 			<arg value="-Dexec.mainClass=fr.inria.ipstat.geoloc.mapper.MapperCLI"/>
 			<arg value="-Dexec.executableDependency=true"/>
-			<arg value="-Dexec.args=www.kermeta.org/awstats_data/kermeta_update"/>
+			<!-- <arg value="-Dexec.args=www.kermeta.org/awstats_data/kermeta_update"/> -->
+			<arg value="-Dexec.args=www.kermeta.org/awstats_data/kermeta_update/awstats012011.kermeta-org-update.txt"/>
 		</exec>
 		
 	</target>
-	
+	<!-- <target name="publish_kml" >
+			<scp todir="${deploy.user}@${deploy.server}:${deploy.path}/fr.irisa.triskell.kermeta.documentation/build"
+				keyfile="${key.file}"
+				passphrase=""
+			    trust="yes">
+			    <fileset dir="imported_projects/fr.irisa.triskell.kermeta.documentation/build">
+			      		<include name="**/**"/>
+				      	<exclude name="**/docboo42/**"/>
+					  	<exclude name="**/eclipse.help/**"/>
+			    </fileset>
+			</scp>
+		</target> -->
 </project>
