--- a/hudson_jobs/generate_kermeta_donwload_stat_geoloc_map/build.xml
+++ b/hudson_jobs/generate_kermeta_donwload_stat_geoloc_map/build.xml
@@ -35,7 +35,7 @@
 			<arg value="-Dexec.mainClass=fr.inria.ipstat.geoloc.mapper.MapperCLI"/>
 			<arg value="-Dexec.executableDependency=true"/>
 			<!-- <arg value="-Dexec.args=www.kermeta.org/awstats_data/kermeta_update"/> -->
-			<arg value="-Dexec.args=&quot;www.kermeta.org/awstats_data/kermeta_update&quot;&quot;"/>
+			<arg value="-Dexec.args=&quot;www.kermeta.org/awstats_data/kermeta_update/awstats032011.kermeta-org-update.txt&quot;&quot;"/>
 		</exec>
 		
 	</target>
