git-svn-id: https://scm.gforge.inria.fr/anonscm/svn/kermeta/trunk@14911 3b3ea266-f0f1-470e-95cb-5b2c9abc2e95
Former-commit-id: 167b49608f1b5bf1813f4cd3068eaa4bf497394e

--- a/hudson_jobs/eclipse_base_mavenizer/build.xml
+++ b/hudson_jobs/eclipse_base_mavenizer/build.xml
@@ -3,8 +3,8 @@
 	<property name="env.WORKSPACE" location="."/>
 	<property name="lib.folder" location="${env.WORKSPACE}/lib"/>
 	<property name="eclipse.native.version.name" value="linux_x86_64"/>
-	<property name="eclipse.native.archive.extension" value="zip"/>
-	<property name="eclipse.native.base.url" value="http://www.kermeta.org/integration_build/base_packages/kermeta_helios_win32_x86_64_base.zip"/>
+	<property name="eclipse.native.archive.extension" value="tar.gz"/>
+	<property name="eclipse.native.base.url" value="http://www.kermeta.org/integration_build/base_packages/kermeta_helios_linux_x86_64_base.tar.gz"/>
 	<property name="smofd.jar" value="tools.simple.maven.osgi.file.deploy-1.0.0-SNAPSHOT.jar"/>
 	<property name="simple.maven.osgi.file.deploy.url" value="http://tipimouss.irisa.fr/maven2-snapshots/org/kermeta/tools/tools.simple.maven.osgi.file.deploy/1.0.0-SNAPSHOT/tools.simple.maven.osgi.file.deploy-1.0.0-SNAPSHOT.jar"/>
 	<property name="jars.folder" location="${env.WORKSPACE}/eclipse_galileo_${eclipse.native.version.name}_base/eclipse/plugins"/>
