changed distribution management version 0.1.0
git-svn-id: https://scm.gforge.inria.fr/anonscm/svn/kermeta/trunk@15083 3b3ea266-f0f1-470e-95cb-5b2c9abc2e95

Former-commit-id: 5d006b0fc2bd6356ea5ff77723db2ae11f780d30

--- a/utilities_projects/fr.irisa.triskell.cache.utilities/pom.xml
+++ b/utilities_projects/fr.irisa.triskell.cache.utilities/pom.xml
@@ -2,7 +2,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>fr.irisa.triskell.cache.utilities</groupId>
   <artifactId>fr.irisa.triskell.cache.utilities</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
+  <version>0.1.0</version>
   <name>Triskell - Cache Utilities</name>
 	<repositories>
 		<repository>
@@ -45,19 +45,19 @@
 		</plugins>
 	</build>
 	<distributionManagement>
-		<repository>
-      		<id>tipimouss-local-maven-repository</id>
-      		<name>Tipimouss Local release repository</name>
-      		<url>file:/var/www/html/maven2</url>
-      		<uniqueVersion>false</uniqueVersion>
-    	</repository>
-    	<snapshotRepository>
-      		<id>tipimouss-local-maven-snapshot-repository</id>
-      		<name>Tipimouss Local  snapshot repository</name>
-      		<url>file:/var/www/html/maven2-snapshots</url>
-      		<uniqueVersion>false</uniqueVersion>
-    	</snapshotRepository>
-	</distributionManagement>
+        <repository>
+            <id>kermeta-public-release</id>
+            <name>Kermeta public release repository on maven.irisa.fr</name>
+            <url>http://maven.irisa.fr/artifactory/kermeta-public-release</url>
+            <uniqueVersion>false</uniqueVersion>
+        </repository>
+        <snapshotRepository>
+            <id>kermeta-public-snapshot</id>
+            <name>Kermeta public snapshot repository on maven.irisa.fr</name>
+            <url>http://maven.irisa.fr/artifactory/kermeta-public-snapshot</url>
+            <uniqueVersion>false</uniqueVersion>
+        </snapshotRepository>
+    </distributionManagement>
 	<profiles>
         <profile>
             <id>sonar</id>
