added packaging to deploy a real osgi component
git-svn-id: https://scm.gforge.inria.fr/anonscm/svn/kermeta/trunk@15098 3b3ea266-f0f1-470e-95cb-5b2c9abc2e95

Former-commit-id: 96bb73439999059f4255ab0ee3728da8302f7f44

--- a/utilities_projects/fr.irisa.triskell.cache.utilities/pom.xml
+++ b/utilities_projects/fr.irisa.triskell.cache.utilities/pom.xml
@@ -3,6 +3,7 @@
   <groupId>fr.irisa.triskell.utilities</groupId>
   <artifactId>cache.utilities</artifactId>
   <version>0.1.0</version>
+  <packaging>bundle</packaging>
   <name>Triskell - Cache Utilities</name>
 	<repositories>
 		<repository>
