Adding Date as a primitive type Modifying ecore.isTransient tag to ecore_isTransient to cope with the Kermeta parser
git-svn-id: https://scm.gforge.inria.fr/anonscm/svn/kermeta/trunk@15247 3b3ea266-f0f1-470e-95cb-5b2c9abc2e95

Former-commit-id: 400075377c072944138c01afece1e8bc4e3da271

--- a/kermeta_projects/fr.irisa.triskell.kermeta.io/build.properties
+++ b/kermeta_projects/fr.irisa.triskell.kermeta.io/build.properties
@@ -10,7 +10,8 @@ bin.includes = .,\
                plugin.properties,\
                src/,\
                lib/,\
-               lib/thirdparty/antlr.jar
+               lib/thirdparty/antlr.jar,\
+               build/class/
 jars.compile.order = .
 source.. = src/java/
 output.. = bin/
