Updating path and version numbers for helios 3.6.2
git-svn-id: https://scm.gforge.inria.fr/anonscm/svn/kermeta/trunk@15459 3b3ea266-f0f1-470e-95cb-5b2c9abc2e95

Former-commit-id: c20208939e1bb27ad650424dac9549fc387b4cdf

--- a/hudson_jobs/provision_eclipse_helios_bases_for_kermeta/build.xml
+++ b/hudson_jobs/provision_eclipse_helios_bases_for_kermeta/build.xml
@@ -4,7 +4,10 @@
 	<!-- Change this according to the computer running the script -->
 	<property name="eclipse.native.version.name" value="linux_x86_64"/>
 	<property name="eclipse.native.archive.extension" value="tar.gz"/>
-	<property name="eclipse.native.base.url" value="http://eclipse.ialto.org/eclipse/downloads/drops/R-3.6.1-201009090800/eclipse-SDK-3.6.1-linux-gtk-x86_64.tar.gz"/>
+	<property name="eclipse.native.base.url.release.folder" value="R-3.6.2-201102101200"/>
+	<property name="eclipse.native.base.url.release.number" value="3.6.2"/>
+	<property name="eclipse.native.base.url" value="http://eclipse.ialto.org/eclipse/downloads/drops/${eclipse.native.base.url.release.folder}/eclipse-SDK-${eclipse.native.base.url.release.number}-linux-gtk-x86_64.tar.gz"/>
+	<property name="eclipse.native.equinox.version" value="1.1.1.R36x_v20101122_1400"/>
 	<!--
 	<property name="eclipse.native.version.name" value="win32"/>
 	<property name="eclipse.native.archive.extension" value="zip"/>
@@ -15,7 +18,7 @@
 	<!-- <property name="target.eclipse.dir" location="${env.WORKSPACE}/build/kermeta_helios_${eclipse.version.name}_base"/> -->
 	<!-- <property name="target.eclipse.zip" location="${env.WORKSPACE}/build/kermeta_helios_${eclipse.version.name}_base.zip"/> -->
 	<!-- <property name="eclipse.home" location="${eclipse.base.dir}/eclipse"/> -->
-	<property name="equinox.jar" value="org.eclipse.equinox.launcher_1.1.0.v20100507.jar"/>
+	<property name="equinox.jar" value="org.eclipse.equinox.launcher_${eclipse.native.equinox.version}.jar"/>
 	<property name="eclipse.workspace.dir" location="${env.WORKSPACE}/eclipseworkspace"/>	
 	<property name="eclipse.build.dir" location="${env.WORKSPACE}/src"/>
 	<property name="eclipse.official.repository" value="http://download.eclipse.org/releases/helios"/>
@@ -37,7 +40,7 @@
 		<antcall target="provision_eclipse_version">
 			<param name="eclipse.version.name" value="linux_x86_64"/>
 			<param name="archive.extension" value="tar.gz"/>
-			<param name="eclipse.base.url" value="http://eclipse.ialto.org/eclipse/downloads/drops/R-3.6.1-201009090800/eclipse-SDK-3.6.1-linux-gtk-x86_64.tar.gz"/>
+			<param name="eclipse.base.url" value="http://eclipse.ialto.org/eclipse/downloads/drops/${eclipse.native.base.url.release.folder}/eclipse-SDK-${eclipse.native.base.url.release.number}-linux-gtk-x86_64.tar.gz"/>
 			<param name="target.os" value="linux"/>
 			<param name="target.ws" value="gtk"/>
 			<param name="target.arch" value="x86_64"/>
@@ -48,7 +51,7 @@
 		<antcall target="provision_eclipse_version">
 			<param name="eclipse.version.name" value="linux_x86"/>
 			<param name="archive.extension" value="tar.gz"/>
-			<param name="eclipse.base.url" value="http://eclipse.ialto.org/eclipse/downloads/drops/R-3.6.1-201009090800/eclipse-SDK-3.6.1-linux-gtk.tar.gz"/>
+			<param name="eclipse.base.url" value="http://eclipse.ialto.org/eclipse/downloads/drops/${eclipse.native.base.url.release.folder}/eclipse-SDK-${eclipse.native.base.url.release.number}-linux-gtk.tar.gz"/>
 			<param name="target.os" value="linux"/>
 			<param name="target.ws" value="gtk"/>
 			<param name="target.arch" value="x86"/>
@@ -60,7 +63,7 @@
 		<antcall target="provision_eclipse_version">
 			<param name="eclipse.version.name" value="win32"/>
 			<param name="archive.extension" value="zip"/>
-			<param name="eclipse.base.url" value="http://eclipse.ialto.org/eclipse/downloads/drops/R-3.6.1-201009090800/eclipse-SDK-3.6.1-win32.zip"/>
+			<param name="eclipse.base.url" value="http://eclipse.ialto.org/eclipse/downloads/drops/${eclipse.native.base.url.release.folder}/eclipse-SDK-${eclipse.native.base.url.release.number}-win32.zip"/>
 			<param name="target.os" value="win32"/>
 			<param name="target.ws" value="win32"/>
 			<param name="target.arch" value="x86"/>
@@ -72,7 +75,7 @@
 		<antcall target="provision_eclipse_version">
 			<param name="eclipse.version.name" value="win32_x86_64"/>
 			<param name="archive.extension" value="zip"/>
-			<param name="eclipse.base.url" value="http://eclipse.ialto.org/eclipse/downloads/drops/R-3.6.1-201009090800/eclipse-SDK-3.6.1-win32-x86_64.zip"/>
+			<param name="eclipse.base.url" value="http://eclipse.ialto.org/eclipse/downloads/drops/${eclipse.native.base.url.release.folder}/eclipse-SDK-${eclipse.native.base.url.release.number}-win32-x86_64.zip"/>
 			<param name="target.os" value="win32"/>
 			<param name="target.ws" value="win32"/>
 			<param name="target.arch" value="x86_64"/>
@@ -84,7 +87,7 @@
 		<antcall target="provision_eclipse_version">
 			<param name="eclipse.version.name" value="macosx-cocoa_x86_64"/>
 			<param name="archive.extension" value="tar.gz"/>
-			<param name="eclipse.base.url" value="http://eclipse.ialto.org/eclipse/downloads/drops/R-3.6.1-201009090800/eclipse-SDK-3.6.1-macosx-cocoa-x86_64.tar.gz"/>
+			<param name="eclipse.base.url" value="http://eclipse.ialto.org/eclipse/downloads/drops/${eclipse.native.base.url.release.folder}/eclipse-SDK-${eclipse.native.base.url.release.number}-macosx-cocoa-x86_64.tar.gz"/>
 			<param name="target.os" value="macosx"/>
 			<param name="target.ws" value="cocoa"/>
 			<param name="target.arch" value="x86_64"/>
@@ -95,7 +98,7 @@
 		<antcall target="provision_eclipse_version">
 			<param name="eclipse.version.name" value="macosx-cocoa"/>
 			<param name="archive.extension" value="tar.gz"/>
-			<param name="eclipse.base.url" value="http://eclipse.ialto.org/eclipse/downloads/drops/R-3.6.1-201009090800/eclipse-SDK-3.6.1-macosx-cocoa.tar.gz"/>
+			<param name="eclipse.base.url" value="http://eclipse.ialto.org/eclipse/downloads/drops/${eclipse.native.base.url.release.folder}/eclipse-SDK-${eclipse.native.base.url.release.number}-macosx-cocoa.tar.gz"/>
 			<param name="target.os" value="macosx"/>
 			<param name="target.ws" value="cocoa"/>
 			<param name="target.arch" value="x86"/>
