--- a/hudson_jobs/full_kermeta_studio_compile/build.xml
+++ b/hudson_jobs/full_kermeta_studio_compile/build.xml
@@ -5,9 +5,8 @@
 	
 	<property name="env.WORKSPACE" location="."/>
 	<property name="eclipse.native.version.name" value="linux_x86_64"/>
-	<property name="equinox.jar.filename" value="org.eclipse.equinox.launcher_1.1.0.v20100507.jar"/>
-	<property name="pde.build.foldername" value="org.eclipse.pde.build_3.6.1.R36x_v20100823"/>
-	
+	<property name="equinox.jar.filename" value="org.eclipse.equinox.launcher_1.1.1.R36x_v20101122_1400.jar"/>
+	<property name="pde.build.foldername" value="org.eclipse.pde.build_3.6.2.R36x_20110203"/>
 	<property name="eclipse.workspace.dir" location="${env.WORKSPACE}/eclipseworkspace"/>	
 	<property name="eclipse.build.dir" location="."/>
 	<property name="eclipse.build.scripts.dir" location="./eclipse_build_scripts"/>
