--- a/hudson_jobs/full_kermeta_studio_eclipsePackages/build.xml
+++ b/hudson_jobs/full_kermeta_studio_eclipsePackages/build.xml
@@ -14,7 +14,7 @@
 	<!-- <property name="target.eclipse.dir" location="${env.WORKSPACE}/build/kermeta_${eclipse.version.name}_base"/> -->
 	<!-- <property name="target.eclipse.zip" location="${env.WORKSPACE}/build/kermeta_${eclipse.version.name}_base.zip"/> -->
 	<!-- <property name="eclipse.home" location="${eclipse.base.dir}/eclipse"/> -->
-	<property name="equinox.jar" value="org.eclipse.equinox.launcher_1.1.0.v20100507.jar"/>
+	<property name="equinox.jar" value="org.eclipse.equinox.launcher_1.1.1.R36x_v20101122_1400.jar"/>
 	<property name="eclipse.workspace.dir" location="${env.WORKSPACE}/eclipseworkspace"/>	
 	<property name="eclipse.build.dir" location="${env.WORKSPACE}/src"/>
 	<property name="eclipse.official.repository" value="http://download.eclipse.org/releases/helios"/>
@@ -22,7 +22,7 @@
 	<!-- <property name="eclipse.official.repository" value="http://eclipse.ialto.org/releases/galileo"/> -->
 	<property name="eclipse.official.repository.local.mirror" location="${env.WORKSPACE}/eclipse_repository_mirror"/>
 	<property name="splash.file" location="./branding/splash.bmp"/>
-	<property name="org.eclipse.platform.version" value="org.eclipse.platform_3.6.1.v201009090800"/>
+	<property name="org.eclipse.platform.version" value="org.eclipse.platform_3.6.2.v201102101200"/>
 	
 	
 	<target name="all" depends="">
