--- a/hudson_jobs/full_kermeta_studio_updatesite/build.xml
+++ b/hudson_jobs/full_kermeta_studio_updatesite/build.xml
@@ -15,7 +15,7 @@
 	<property name="studio.archive.extension" value="tar.gz"/>
 	<property name="studio.base.url" value="http://tipimouss.irisa.fr:8090/job/provision_eclipse_helios_bases_for_kermeta/lastSuccessfulBuild/artifact/provision_eclipse_helios_bases_for_kermeta/build/kermeta_helios_linux_x86_64_base.${studio.archive.extension}"/>
 	<property name="eclipse.bin.home" location="${studio.base.dir}/eclipse"/>
-	<property name="equinox.jar.filename" value="org.eclipse.equinox.launcher_1.1.0.v20100507.jar"/>
+	<property name="equinox.jar.filename" value="org.eclipse.equinox.launcher_1.1.1.R36x_v20101122_1400.jar"/>
 	<property name="deploy.server" value="web1.irisa.fr"/>
 	<property name="deploy.user" value="web-triskell"/>
 	<property name="deploy.path" value="/home/web/apache/sites/kermeta.org/htdocs/integration_build/update"/>
