git-svn-id: https://scm.gforge.inria.fr/anonscm/svn/kermeta/trunk@15519 3b3ea266-f0f1-470e-95cb-5b2c9abc2e95
Former-commit-id: 02b6a58c36247f16a6256f2f85aa6aedb6bb2143

--- a/hudson_jobs/provision_eclipse_indigo_bases_for_kermeta/build.xml
+++ b/hudson_jobs/provision_eclipse_indigo_bases_for_kermeta/build.xml
@@ -118,9 +118,9 @@
 	
 	<target name="get_dropins">
 		<mkdir dir="${env.WORKSPACE}/build/dropins/"/>
-		<get src="http://repo1.maven.org/maven2/org/apache/aries/blueprint/org.apache.aries.blueprint/0.1-incubating/org.apache.aries.blueprint-0.1-incubating.jar" 
+		<!-- <get src="http://repo1.maven.org/maven2/org/apache/aries/blueprint/org.apache.aries.blueprint/0.1-incubating/org.apache.aries.blueprint-0.1-incubating.jar" 
 						dest="${env.WORKSPACE}/build/dropins/org.apache.aries.blueprint-0.1-incubating.jar"
-						usetimestamp="true"/>
+						usetimestamp="true"/> -->
 		<get src="http://www.kermeta.org/maven2-snapshots/org/kermeta/utils/utils.slf4j.eclipse/2.0.0-SNAPSHOT/utils.slf4j.eclipse-2.0.0-SNAPSHOT.jar" 
 						dest="${env.WORKSPACE}/build/dropins/org.kermeta.utils.slf4j.eclipse-2.0.0-SNAPSHOT.jar"
 						usetimestamp="true"/>
@@ -130,11 +130,11 @@
 		<get src="http://www.kermeta.org/maven2-snapshots/org/kermeta/utilities/eclipse/utilities.eclipse.jface/2.0.0-SNAPSHOT/utilities.eclipse.jface-2.0.0-SNAPSHOT.jar" 
 						dest="${env.WORKSPACE}/build/dropins/org.kermeta.utilities.eclipse.jface-2.0.0-SNAPSHOT.jar"
 						usetimestamp="true"/>
-		<get src="http://repo1.maven.org/maven2/org/ops4j/pax/url/pax-url-mvn/1.1.3/pax-url-mvn-1.1.3.jar" 
-						dest="${env.WORKSPACE}/build/dropins/org.ops4j.pax-url-mvn-1.1.3.jar"
+		<get src="http://repo1.maven.org/maven2/org/ops4j/pax/url/pax-url-mvn/1.3.4/pax-url-mvn-1.3.4.jar" 
+						dest="${env.WORKSPACE}/build/dropins/org.ops4j.pax-url-mvn-1.3.4.jar"
 						usetimestamp="true"/>
-		<get src="http://repo1.maven.org/maven2/org/ops4j/pax/url/pax-url-assembly/1.1.3/pax-url-assembly-1.1.3.jar" 
-						dest="${env.WORKSPACE}/build/dropins/org.ops4j.pax-url-assembly-1.1.3.jar"
+		<get src="http://repo1.maven.org/maven2/org/ops4j/pax/url/pax-url-assembly/1.3.4/pax-url-assembly-1.3.4.jar" 
+						dest="${env.WORKSPACE}/build/dropins/org.ops4j.pax-url-assembly-1.3.4.jar"
 						usetimestamp="true"/>
 	</target>
 	
