--- a/log4j_projects/org.kermeta.slf4j.eclipse/pom.xml
+++ b/log4j_projects/org.kermeta.slf4j.eclipse/pom.xml
@@ -11,11 +11,11 @@
 	<artifactId>utils.slf4j.eclipse</artifactId>
 	<packaging>bundle</packaging>
 	<name>Utils :: SLF4J eclipse</name>
-	
+	<version>${utils.version}</version>
 	<parent>
-		<groupId>org.kermeta.utils</groupId>
-        <artifactId>utils.root</artifactId>
-        <version>2.0.0-SNAPSHOT</version>
+		<groupId>org.kermeta</groupId>
+        <artifactId>kermeta.root</artifactId>
+        <version>2.0-SNAPSHOT</version>
 	</parent>
 		
 	<build>
